kubernetes/apps/datasci/deploykf/generated/manifests/kubeflow-tools/katib/patches/patch-katib-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katib-ui
  namespace: kubeflow
spec:
  hosts:
    - "kf.kubeflow.com"
  gateways:
    - deploykf-istio-gateway/deploykf-gateway
