kubernetes/apps/datasci/deploykf/generated/manifests/kubeflow-tools/katib/patches/patch-katib-mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: katib.kubeflow.org
