kubernetes/apps/datasci/deploykf/generated/manifests/kubeflow-tools/katib/patches/patch-katib-validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: katib.kubeflow.org
